--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@ backend/.env
 backend/.npm/
 backend/.cache/
 backend/logs/
-backend/package-lock.json
 backend/dist/
 backend/build/
 backend/.DS_Store
@@ -39,9 +38,10 @@ frontend/ios/*.xcodeproj/
 
 # Logs & system files
 *.log
-
+*.lock
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+package-lock.json
 .DS_Store
 Thumbs.db
