--- a/.env
+++ b/.env
@@ -4,10 +4,10 @@
 # DB_PASSWORD=Digital@123
 # DB_PORT=5432
 
-DB_USER=jothi_04
-DB_NAME=postgre_14rc
-DB_PASSWORD=EEbrmPc8GyXelfTMh9MYAWwOCY5VpI66
-DB_HOST=dpg-d0qm2pemcj7s73e5lmgg-a.oregon-postgres.render.com
+DB_USER=jothi_26
+DB_NAME=postgres26
+DB_PASSWORD=SY2bNtkQqh8FLydb31eye7xnyoUuuV2S
+DB_HOST=dpg-dpg-d1eivkeuk2gs73apk8k0-a.oregon-postgres.render.com
 DB_PORT=5432
 
 
